@@ -23,6 +23,7 @@ Bug fixes
  - [web] restore cards selection after automatic refresh (#4809)
  - [web] don't mark draft as deleted when SOGoMailKeepDraftsAfterSend is enabled (#4830)
  - [web] allow single-day vacation auto-reply (#4698)
+ - [web] allow import to calendar subscriptions with creation rights
  - [core] honor IMAPLoginFieldName also when setting IMAP ACLs
  - [core] honor groups when setting IMAP ACLs
  - [core] honor "any authenticated user" when setting IMAP ACLs
